openshift/startpagina-deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: startpagina
spec:
  replicas: 2
  selector:
    matchLabels:
      app: startpagina
  template:
    metadata:
      labels:
        app: startpagina
    spec:
      containers:
      - name: startpagina
        image: janbakkerhch/startpagina:1.0.0 # image-registry.openshift-image-registry.svc:5000/jbakkerschiphol-dev/startpagina:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
