openshift/startpagina-route-1.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: startpagina
spec:
  host: startpagina-xxxxxxxx-dev.apps.rm2.thpm.p1.openshiftapps.com
  path: /
  to:
    kind: Service
    name: startpagina
    weight: 100
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
